--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,86 @@
 @charset "UTF-8";
+/* 端末共通 */
+* {
+    margin: 0;
+    padding: 0;
+}
+html {
+    border: red 1px solid;
+}
+body {
+    border: blue 1px solid;
+}
+
+/* header */
+header {
+    background-color: #ffdfc0;
+    display: flex;
+}
+header h1 {
+    margin: 0;
+    padding: 0;
+    font-family: Georgia;
+    font-style: italic;
+}
+header h1 a {
+    color: #000;
+    text-decoration: none;
+}
+header nav {
+    margin-left: auto;
+}
+header nav ul {
+    display: flex;
+    list-style-type: none;
+}
+header nav ul a,
+header nav ul a:link,
+header nav ul a:visited {
+    text-decoration: none;
+    color: #000;
+    display: inline-block;
+    position: relative;
+}
+header nav ul a:hover {
+    color: #f528cd;
+}
+/* hover時のアニメーション */
+header nav ul a::after {
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    content: '';
+    width: 100%;
+    height: 1px;
+    background-color: #f528cd;
+    transform: scale(0, 1);
+    transform-origin: center top;
+    transition: .3s;
+}
+header nav ul a:hover::after {
+    transform: scale(1, 1);
+}
+
+/* スマホ */
+@media screen and (max-width: 1024px) {
+
+}
+
+
+/* PC */
+@media screen and (min-width: 1025px) {
+    h1 {
+        font-size: 2.5vw;
+    }
+    header h1 {
+        padding: 1.5vh 2vw;
+    }
+    header nav {
+        padding-top: 3vh;
+        font-size: 1.2vw;
+    }
+    header nav ul li {
+        /* padding: 1.8vh 0; */
+        margin-right: 2vw;
+    }
+}
