--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,13 @@
     padding: 0;
 }
 html {
-    border: red 1px solid;
+    /* border: red 1px solid; */
+    font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E", "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
+    font-size: 62.5%;
 }
 body {
-    border: blue 1px solid;
+    /* border: blue 1px solid; */
+    z-index: 100;
 }
 
 /* header */
@@ -26,61 +29,283 @@ header h1 a {
     color: #000;
     text-decoration: none;
 }
-header nav {
-    margin-left: auto;
-}
-header nav ul {
-    display: flex;
-    list-style-type: none;
-}
-header nav ul a,
-header nav ul a:link,
-header nav ul a:visited {
-    text-decoration: none;
-    color: #000;
-    display: inline-block;
-    position: relative;
-}
-header nav ul a:hover {
-    color: #f528cd;
-}
-/* hover時のアニメーション */
-header nav ul a::after {
-    position: absolute;
-    bottom: -3px;
-    left: 0;
-    content: '';
-    width: 100%;
-    height: 1px;
-    background-color: #f528cd;
-    transform: scale(0, 1);
-    transform-origin: center top;
-    transition: .3s;
-}
-header nav ul a:hover::after {
-    transform: scale(1, 1);
-}
 
 /* スマホ */
 @media screen and (max-width: 1024px) {
 
+    /* header */
+    header h1 {
+        margin: 10px 20px;
+        font-size: 2.5rem;
+    }
+    /* ハンバーガーメニュー */
+    header #nav_toggle {
+        margin-left: auto;
+        display: block;
+		width: 30px;
+		height: 30px;
+		position: relative;
+        top: 12px;
+        right: 10px;
+    }
+    header #nav_toggle div {
+        position: relative;
+    }
+    header #nav_toggle div span {
+        display: block;
+        height: 3px;
+        background: #555;
+        position: absolute;
+        width: 100%;
+        left: 0;
+        transition: 0.5s ease-in-out;
+    }
+    header #nav_toggle div span:nth-child(1) {
+        top: 0;
+    }
+    header #nav_toggle div span:nth-child(2) {
+        top: 10px;
+    }
+    header #nav_toggle div span:nth-child(3) {
+        top: 20px;
+    }
+    /*開閉ボタンopen時*/
+	.open #nav_toggle span:nth-child(1) {
+        top: 12px;
+        transform: rotate(135deg);
+    }
+    .open #nav_toggle span:nth-child(2) {
+        width: 0;
+        left: 50%;
+    }
+    .open #nav_toggle span:nth-child(3) {
+        top: 12px;
+        transform: rotate(-135deg);
+    }
+    header nav {
+        display: none;
+		position: absolute;
+		top: 47px;
+		width: 100%;
+		background: #ffdfc0;
+        left: 0;
+        z-index: 99;
+    }
+    header nav ul {
+        display: block;
+        margin: auto;
+        width: 90%;
+        font-size: 2.0rem;
+    }
+    header nav ul li {
+        padding: 15px 0;
+        list-style-type: none;
+        text-align: center;
+        border-top: 2px solid #fff;
+    }
+    header nav ul li a,
+    header nav ul li a:link,
+    header nav ul li a:visited {
+        color: #000;
+        text-decoration: none;
+    }
+
+    /* main */
+    .home main {
+        background: url(../images/DL.jpg) center center / cover no-repeat;
+        height: 98vh;
+    }
+    .home main .opacity {
+        background: rgba(255,255,255, 0.6);
+        position: relative;
+        height: 100%;
+    }
+    .home main .opacity div h1 {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        padding: 50px 0 30px 0;
+        font-size: 3rem;
+    }
+    .home main .opacity div p {
+        text-align: center;
+        padding: 0 0 40px 0;
+        font-size: 1.5rem;
+    }
+    /* スライダー */
+    .home main .opacity .slider {
+        list-style-type: none;
+        margin: auto;  /* margin: 0 autoと同様 */
+        position: relative;
+        display: flex;
+    }
+    .home main .opacity .slider li {
+        margin: 0 3vw;
+    }
+    .home main .opacity .slider li img {
+        width: 100%;
+    }
+    .home main .opacity .slider button {
+        outline: none; /* hover時の効果を無効にする(アウトラインに色がつく効果無効) */
+    }
+    .home main .opacity .slider .prev-arrow {
+        width: 12vw;
+        background: #000;
+        opacity: 0.5;
+    }
+    .home main .opacity .slider .prev-arrow::after {
+        content: '<';
+        color: #fff;
+    }
+    .home main .opacity .slider .next-arrow {
+        width: 12vw;
+        background: #000;
+        opacity: 0.5;
+    }
+    .home main .opacity .slider .next-arrow::after {
+        content: '>';
+        color: #fff;
+    }
+
+    /* footer */
+    .home main .opacity footer {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        bottom: 10px;
+    }
 }
 
 
 /* PC */
 @media screen and (min-width: 1025px) {
-    h1 {
-        font-size: 2.5vw;
-    }
+
+    /* header */
     header h1 {
-        padding: 1.5vh 2vw;
+        margin: 10px 20px;
+        font-size: 3.0rem;
+    }
+    header #nav_toggle {
+        display: none;
     }
     header nav {
-        padding-top: 3vh;
-        font-size: 1.2vw;
+        margin-left: auto;
+    }
+    header nav ul {
+        display: flex;
+        list-style-type: none;
+        height: 100%;
     }
     header nav ul li {
-        /* padding: 1.8vh 0; */
-        margin-right: 2vw;
+        margin-right: 30px;
+    }
+    header nav ul li a {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-40%);
+        font-size: 1.8rem;
+    }
+    header nav ul a,
+    header nav ul a:link,
+    header nav ul a:visited {
+        text-decoration: none;
+        color: #000;
+        display: inline-block;
+        position: relative;
+    }
+    header nav ul a:hover {
+        color: #f528cd;
+    }
+    /* hover時のアニメーション */
+    header nav ul a::after {
+        position: absolute;
+        bottom: -3px;
+        left: 0;
+        content: '';
+        width: 100%;
+        height: 1px;
+        background-color: #f528cd;
+        transform: scale(0, 1);
+        transform-origin: center top;
+        transition: .3s;
+    }
+    header nav ul a:hover::after {
+        transform: scale(1, 1);
+    }
+
+    /* main */
+    .home main {
+        background: url(../images/DL.jpg) center center / cover no-repeat;
+        min-height: 93.5vh;
+    }
+    .home main .opacity {
+        background: rgba(255,255,255, 0.6);
+        min-height: 93.5vh;
+        position: relative;
+    }
+    .home main .opacity div h1 {
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        padding: 80px 0 50px 0;
+        font-size: 4rem;
+    }
+    .home main .opacity div p {
+        text-align: center;
+        padding: 0 0 50px 0;
+        font-size: 1.8rem;
+    }
+    
+    .home main .opacity .slider {
+        list-style-type: none;
+        width: 80%;
+        margin: auto;  /* margin: 0 autoと同様 */
+        position: relative;
+    }
+    .home main .opacity .slider li {
+        margin: 0 5vw;
+    }
+    .home main .opacity .slider li img {
+        width: 100%;
+        transition: all 0.3s linear;
+        box-shadow: 15px 15px 15px #333;
+    }
+    .home main .opacity .slider li img:hover {
+        transform: scale(1.1);
+    }
+    .home main .opacity .slider button {
+        background: none;
+        outline: none;
+    }
+    .home main .opacity .slider .prev-arrow {
+        left: -3vw;
+        width: 0;
+        height: 0;
+        border-left: 0 solid transparent;
+        border-right: 3vw solid #ea6555;
+        border-top: 2vw solid transparent;
+        border-bottom: 2vw solid transparent;
+    }
+    .home main .opacity .slider .next-arrow {
+        right: -3vw;
+        width: 0;
+        height: 0;
+        border-left: 3vw solid #ea6555;
+        border-right: 0 solid transparent;
+        border-top: 2vw solid transparent;
+        border-bottom: 2vw solid transparent;
+    }
+    .home main .opacity .slider .slide-arrow {
+        position: absolute;
+        top: 50%;
+        margin-top: -70px;
+    }
+
+    /* footer */
+    .home main .opacity footer {
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+        font-size: 1.5rem;
     }
 }
