--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ header h1 a {
 		position: absolute;
 		top: 47px;
 		width: 100%;
-		background: #ffdfc0;
+		background: #FFEAD7;
         left: 0;
         z-index: 99;
     }
